# cologic

./: .env.example  .gitignore  README.md  baseline.json  modal_app.py  package-lock.json  package.json  pyproject.toml  search.mjs  serve.py
agents/: run_loop.py  train.py
artifacts/sia_run_1/: README.md  context.md  run_log_tail.txt  target_agent_gen1_to_gen2.diff
artifacts/sia_run_1/gen_1/: agent_execution.json  results.json  (+1 more)
cologic/: __init__.py  __main__.py  designs.py  export_web.py  inference.py  prompt.py  reward.py  rft.py  run_eval_hud.py  store.py  tasks.py  uplift_multitrial.py  uplift_run.py  vcd.py
cologic-verilog/: .gitignore  run_baseline.sh  uplift_repair.py
cologic/grader/: ppa.py
data/: rft_weight_update_canary.json
docs/: ARCHITECTURE.md  FRONTEND_DATA_CONTRACT.md  RESEARCH_REPORT.md  demo_runbook.md  rft_workflow.md  web_architecture.md
examples/systolic_array/: systolic_array.v  tb_systolic_array.v
fireworks_rft/: README.md  dataset.jsonl  test_cologic_opt_reward.py  test_cologic_reward.py
frontend/: package-lock.json  package.json
harness/: __init__.py
rl_hdl/: designs.py  eval.py  inference.py  prompt.py  schema.py  tasks.py  verifier.py
rl_hdl/datasets/: __init__.py  verilogeval.py
rl_hdl/grader/: __init__.py  equivalence.py
scripts/: build_verilogeval_subset.py  demo_check.py  modal_fireworks_deploy.py  modal_fireworks_rft.py  modal_sia_run.py
tests/: test_datasets.py  test_grader.py  test_inference.py  test_reward.py  test_tpu_opt.py  test_verifier.py
web/: benchmark.html  data.json  die.html  index.html
(+29 files in other folders)
